--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.3.5) UNRELEASED; urgency=medium
+debhelper (11.3.5) unstable; urgency=medium
 
   * Dh_Lib.pm: Introduce a new glob_expand error handler to
     better emulate the old style glob code to fail when a
@@ -15,7 +15,7 @@ debhelper (11.3.5) UNRELEASED; urgency=medium
     to omit the last package listed in the file.  Thanks to
     Santiago Vila for reporting the bug. (Closes: #902748)
 
- -- Niels Thykier <niels@thykier.net>  Sat, 30 Jun 2018 11:16:30 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 30 Jun 2018 11:52:51 +0000
 
 debhelper (11.3.4) unstable; urgency=medium
 
