dh_dwz.1: dh_dwz is not experimental (any longer)
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.3.6) UNRELEASED; urgency=medium
+
+  * dh_dwz.1: Remove now obsolete note in manpage claming that dh_dwz
+    was experimental.  Since debhelper/11.3, dh_dwz was no longer
+    experimental.
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
+
 debhelper (11.3.5) unstable; urgency=medium
 
   * Dh_Lib.pm: Introduce a new glob_expand error handler to
