cmake: Explicitly set CMAKE_INSTALL_LIBDIR
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debhelper (11.3.6) UNRELEASED; urgency=medium
   * dh_dwz.1: Remove now obsolete note in manpage claming that dh_dwz
     was experimental.  Since debhelper/11.3, dh_dwz was no longer
     experimental.
+  * cmake.pm: Explicitly set CMAKE_INSTALL_LIBDIR on native builds.
+    This should not make any pratical difference but aligns the
+    behaviour of native and cross builds.  Thanks to Simon McVittie
+    for the suggestion.  (Closes: #903042)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
