dh_installinit.1: Improve documentation of compat level related items
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,10 @@ debhelper (11.4) UNRELEASED; urgency=medium
     md5sums file.  Previously, dh_md5sums could fail with the error:
     """... "/bin/sh": Argument list too long at ..."""
     (Closes: #864182)
+  * dh_installinit.1: Correct documentation which was inaccurate in relation
+    to which compat levels where dh_installinit still supported systemd
+    items and upstart jobs.  Thanks to Theodore Y. Ts'o for bring up the
+    issue.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
