d/changelog: Add entry for Juhani Numminen's commit
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 debhelper (11.4) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * dh_dwz.1: Remove now obsolete note in manpage claming that dh_dwz
     was experimental.  Since debhelper/11.3, dh_dwz was no longer
     experimental.
@@ -25,6 +26,10 @@ debhelper (11.4) UNRELEASED; urgency=medium
     to which compat levels where dh_installinit still supported systemd
     items and upstart jobs.  Thanks to Theodore Y. Ts'o for bring up the
     issue.
+
+  [ Juhani Numminen ]
+  * dh_installsystemd.1: Fix typo in manpage.
+  * dh_installinit.1: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
