dh_installdeb: Ignore debian/*.conffiles [c12]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ debhelper (11.4) UNRELEASED; urgency=medium
     to which compat levels where dh_installinit still supported systemd
     items and upstart jobs.  Thanks to Theodore Y. Ts'o for bring up the
     issue.
+  * dh_installdeb: In compat 12, ignore the maintainer provided conffiles.
+    It has not been useful since compat 3.
 
   [ Juhani Numminen ]
   * dh_installsystemd.1: Fix typo in manpage.
