--- a/debhelper.pod
+++ b/debhelper.pod
@@ -862,6 +862,13 @@ via the following example:
 
 Note the B<--> before the B<--libexecdir> parameter.
 
+=item -
+
+The B<dh_installdeb> tool no longer installs the maintainer provided
+F<conffiles> file.  The file has mostly been obsolete since
+compatibility level 3, where B<dh_installdeb> began to automatically
+compute the resulting F<conffiles> control file.
+
 =back
 
 =back
