d/changelog: Document Fabian's changes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,10 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * dh_installsystemd.1: Fix typo in manpage.
   * dh_installinit.1: Ditto.
 
+  [ Fabian Wolff ]
+  * dh_installdocs.1: Fix typo.
+  * dh_link.1: Ditto.
+
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
 debhelper (11.3.5) unstable; urgency=medium
