Have helpers explicitly declare the --priority parameter
The Dh_Lib library currently defines a number of built-in parameters
for all helpers by default. However, some of these parameters turn out
to be rarely used (--priority being one of them).

This change is an effort to reduce the number of unused parameters
supported by Dh_Lib by default.

Related MRs: https://salsa.debian.org/tex-team/tex-common/merge_requests/1/diffs

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,12 @@ debhelper (11.4) UNRELEASED; urgency=medium
     it enables the following optimization.
   * Dh_Lib.pm: Have isnative() special-case debian/changelog to avoid
     reparsing that file over and over in the same helper.
+  * dh_gconf: Explicitly declare the --priority parameter with the intend
+    to remove it from the default debhelper options in a later release.
+  * dh_installemacsen: Ditto.
+  * dh_installgsettings: Ditto.
+  * dh_installudev: Ditto.
+  * dh_installwm: Ditto.
 
   [ Juhani Numminen ]
   * dh_installsystemd.1: Fix typo in manpage.
