Fix typo in debian/changelog
Thanks lintian!

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,7 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * dh_installudev: Ditto.
   * dh_installwm: Ditto.
   * Dh_Getopt.pm: Remove --priority from the list of options supported by all
-    debhelper tools.  The only external consumer was was dh_installtex from
+    debhelper tools.  The only external consumer was dh_installtex from
     tex-common, which was fixed in 6.10.
 
   [ Juhani Numminen ]
