--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,10 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * cmake.pm, autoconf.pm: honor QUIET setting (closes: #907738).
   * Dh_Lib.pm: use terse build option to set QUIET setting (closes: #907595).
 
+  [ Clément Hermann ]
+  * debhelper.pod: Document dh_golang's DH_GOLANG_EXCLUDES behaviour change
+    for compat 12 (closes: #908656)
+
  -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
 
 debhelper (11.3.5) unstable; urgency=medium
