d/changelog: Improve wording of an entry
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,8 +56,8 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * dh_strip: Ditto.
   * Dh_Getopt.pm: Remove -k/--keep from the list of options supported by all
     debhelper tools.  The only external consumer was dh_gtkmodules which is now
-    deprecated and a "noop" dh_installtex.  No consumers of dh_gtkmodules
-    appear to pass -k/--keep to dh_gtkmodules any longer.
+    deprecated and a "noop" command.  No consumers of dh_gtkmodules appear to
+    pass -k/--keep to dh_gtkmodules any longer.
   * dh: Rewrite command line optimization logic to enable support for a new
     NOOP PROMISE for command line options.  This will make dh able to skip
     helpers in some cases even when passed options.  (Closes: #866581)
