d/changelog: Fix typo
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,7 +33,7 @@ debhelper (11.4) UNRELEASED; urgency=medium
     it enables the following optimization.
   * Dh_Lib.pm: Have isnative() special-case debian/changelog to avoid
     reparsing that file over and over in the same helper.
-  * dh_gconf: Explicitly declare the --priority parameter with the intend
+  * dh_gconf: Explicitly declare the --priority parameter with the intention
     to remove it from the default debhelper options.
   * dh_installemacsen: Ditto.
   * dh_installgsettings: Ditto.
@@ -50,7 +50,7 @@ debhelper (11.4) UNRELEASED; urgency=medium
     auto-generated postrm script.  The systemd package has a trigger for
     handling sysvinit scripts and dh_installsystemd handles the requirement
     for native systemd unit files.
-  * dh_clean: Explicitly declare the -k/--keep parameter with the intend
+  * dh_clean: Explicitly declare the -k/--keep parameter with the intention
     to remove it from the default debhelper options.
   * dh_installchangelogs: Ditto.
   * dh_strip: Ditto.
