--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,7 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * dh: Remove old compatibility code from compat 10 that never worked.
   * Dh_Getopt.pm: Fix a bug that would make "-S" be interpreted as "-s" when
     "-S" was not given an argument.
+  * debian/control: Bump Standards-Versions to 4.2.1 - no changes required.
 
   [ Juhani Numminen ]
   * dh_installsystemd.1: Fix typo in manpage.
