debhelper.pod: Compat 12 is now in beta
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -771,7 +771,7 @@ This change may cause the tools to process more files than previously.
 
 =item v12
 
-This compatibility level is still open for development; use with caution.
+This compatibility level is open for beta testing; changes may occur.
 
 Changes from v11 are:
 
