--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,7 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * Dh_Getopt.pm: Fix a bug that would make "-S" be interpreted as "-s" when
     "-S" was not given an argument.
   * debian/control: Bump Standards-Versions to 4.2.1 - no changes required.
+  * debhelper.pod: Declare compat 12 in beta testing.
 
   [ Juhani Numminen ]
   * dh_installsystemd.1: Fix typo in manpage.
