--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.4) UNRELEASED; urgency=medium
+debhelper (11.4) unstable; urgency=medium
 
   [ Niels Thykier ]
   * dh_dwz.1: Remove now obsolete note in manpage claming that dh_dwz
@@ -84,7 +84,7 @@ debhelper (11.4) UNRELEASED; urgency=medium
   * debhelper.pod: Document dh_golang's DH_GOLANG_EXCLUDES behaviour change
     for compat 12 (closes: #908656)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 01 Aug 2018 10:27:22 +0000
+ -- Niels Thykier <niels@thykier.net>  Fri, 14 Sep 2018 20:56:55 +0000
 
 debhelper (11.3.5) unstable; urgency=medium
 
