debhelper.pod: Quote value of INSTALL in c11 description
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -659,8 +659,8 @@ The vast majority of all packages will be unaffected by this change.
 
 =item -
 
-The B<makefile> buildsystem now passes B<INSTALL=install
---strip-program=true> to L<make(1)>.  Derivative buildsystems
+The B<makefile> buildsystem now passes B<INSTALL="install
+--strip-program=true"> to L<make(1)>.  Derivative buildsystems
 (e.g. B<configure> or B<cmake>) are unaffected by this change.
 
 =item -
