--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.4.1) UNRELEASED; urgency=medium
+
+  * debhelper.pod: Quote the value of INSTALL in description of
+    compat level 11.  Thanks to Josh Triplett for the suggestion
+    (Closes: #908906)
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 16 Sep 2018 06:56:12 +0000
+
 debhelper (11.4) unstable; urgency=medium
 
   [ Niels Thykier ]
