d/changelog: Add changelog entries for Josh Triplett's commits
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
 debhelper (11.4.1) UNRELEASED; urgency=medium
 
+  [ Niels Thykier ]
   * debhelper.pod: Quote the value of INSTALL in description of
     compat level 11.  Thanks to Josh Triplett for the suggestion
     (Closes: #908906)
+
+  [ Josh Triplett ]
+  * debhelper.pod: Document how to declare the debhelper compat
+    level via the "debhelper-compat (= X)"-method.
+    (Closes: #908909)
+  * debhelper.pod: Document that we do not provide debhelper-compat
+    for experimental/beta versions of compat levels.
+    (Closes: #908907)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 16 Sep 2018 06:56:12 +0000
 
