d/changelog: Fix typos
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (11.4.1) UNRELEASED; urgency=medium
   * debhelper.pod: Quote the value of INSTALL in description of
     compat level 11.  Thanks to Josh Triplett for the suggestion
     (Closes: #908906)
+  * d/changelog: Fix typos in old entries.
 
   [ Josh Triplett ]
   * debhelper.pod: Document how to declare the debhelper compat
@@ -220,7 +221,7 @@ debhelper (11.3) unstable; urgency=medium
     Robie Basak for spotting the contradicting documentation.
     (Closes: #898161)
   * dh_compress:  Avoid adding a duplicate ".gz" extension on
-    a symlink if it already has it.   This can happen e.g. with
+    a symlink if it already has it.  This can happen e.g. with
     dh_installman recompresses a manpage that was compressed and
     had a valid symlink to it.  Thanks to Andreas Hasenack for
     reporting the bug.  (Closes: LP: #1765851)
@@ -1362,7 +1363,7 @@ debhelper (10.5) unstable; urgency=medium
   * Dh_Lib.pm: Emulate "install -d" with File::Path to avoid a fork+exec
     for creating directories.  For simplicity, the verbose output still
     claim debhelper uses "install -d" for this.
-  * dh_auto_install: In compat 11, do noot create package build
+  * dh_auto_install: In compat 11, do not create package build
     directories (except if one of them happens to be the default
     "destdir" for dh_auto_install).
 
