dh_strip: Remove empty dirs caused by dh_dwz's output
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (11.4.1) UNRELEASED; urgency=medium
     compat level 11.  Thanks to Josh Triplett for the suggestion
     (Closes: #908906)
   * d/changelog: Fix typos in old entries.
+  * dh_strip: Remove empty /usr/lib/debug directories left over
+    by dh_dwz.  Thanks to Ferenc Wágner for reporting the issue.
+    (Closes: #909303)
 
   [ Josh Triplett ]
   * debhelper.pod: Document how to declare the debhelper compat
