d/changelog: Document Josh's typo fixes
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ debhelper (11.4.1) UNRELEASED; urgency=medium
   * debhelper.pod: Document that we do not provide debhelper-compat
     for experimental/beta versions of compat levels.
     (Closes: #908907)
+  * doc/PROGRAMMING: Fix typos.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 16 Sep 2018 06:56:12 +0000
 
