--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.4.1) UNRELEASED; urgency=medium
+debhelper (11.4.1) unstable; urgency=medium
 
   [ Niels Thykier ]
   * debhelper.pod: Quote the value of INSTALL in description of
@@ -24,7 +24,7 @@ debhelper (11.4.1) UNRELEASED; urgency=medium
     (Closes: #908907)
   * doc/PROGRAMMING: Fix typos.
 
- -- Niels Thykier <niels@thykier.net>  Sun, 16 Sep 2018 06:56:12 +0000
+ -- Niels Thykier <niels@thykier.net>  Sun, 30 Sep 2018 15:49:38 +0000
 
 debhelper (11.4) unstable; urgency=medium
 
