dh_installsystemd.1: Improve docs about --name
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,12 @@ debhelper (11.5) UNRELEASED; urgency=medium
     enable, mask and disable units when the package is installed,
     upgraded, or removed.  (Closes: #764678)
 
+  [ Niels Thykier ]
+  * dh_installsystemd.1: Improve the documentation for --name to make
+    it more clear that it also changes the name of the source files in
+    the debian directory.  Thanks to Emel Hasdal for reporting the
+    issue and reviewing the change.  (Closes: #899983)
+
  -- Daniele Nicolodi <daniele@grinta.net>  Sun, 14 Oct 2018 10:13:17 -0600
 
 debhelper (11.4.1) unstable; urgency=medium
