--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.5) UNRELEASED; urgency=medium
+debhelper (11.5) unstable; urgency=medium
 
   [ Daniele Nicolodi ]
   * dh_installsystemduser: New helper responsible for istalling package
@@ -13,7 +13,7 @@ debhelper (11.5) UNRELEASED; urgency=medium
     the debian directory.  Thanks to Emel Hasdal for reporting the
     issue and reviewing the change.  (Closes: #899983)
 
- -- Daniele Nicolodi <daniele@grinta.net>  Sun, 14 Oct 2018 10:13:17 -0600
+ -- Niels Thykier <niels@thykier.net>  Sun, 28 Oct 2018 16:07:01 +0000
 
 debhelper (11.4.1) unstable; urgency=medium
 
