dh_systemd_enable: Add missing substitution of RESTART_ACTION token
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (11.5.1) UNRELEASED; urgency=medium
+
+  * dh_systemd_start: Fix bug introduced in debhelper/11.5 where
+    dh_systemd_start would fail to substitute a token in the
+    generated maintscript for maintainer scripts when using
+    "--restart-after-upgrade" (including when the option is
+    on by default).  Thanks to Colin Watson for reporting the
+    bug.  (Closes: #912420)
+
+ -- Niels Thykier <niels@thykier.net>  Wed, 31 Oct 2018 20:58:42 +0000
+
 debhelper (11.5) unstable; urgency=medium
 
   [ Daniele Nicolodi ]
