--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.5.1) UNRELEASED; urgency=medium
+debhelper (11.5.1) unstable; urgency=medium
 
   * dh_systemd_start: Fix bug introduced in debhelper/11.5 where
     dh_systemd_start would fail to substitute a token in the
@@ -7,7 +7,7 @@ debhelper (11.5.1) UNRELEASED; urgency=medium
     on by default).  Thanks to Colin Watson for reporting the
     bug.  (Closes: #912420)
 
- -- Niels Thykier <niels@thykier.net>  Wed, 31 Oct 2018 20:58:42 +0000
+ -- Niels Thykier <niels@thykier.net>  Wed, 31 Oct 2018 21:02:00 +0000
 
 debhelper (11.5) unstable; urgency=medium
 
