--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.5.2) UNRELEASED; urgency=medium
+
+  [ Luca Boccassi ]
+  * makefile.pm: Pass V=0 or V=1 to the make file depending on
+    whether "terse" is set in DEB_BUILD_OPTIONS.
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
+
 debhelper (11.5.1) unstable; urgency=medium
 
   * dh_systemd_start: Fix bug introduced in debhelper/11.5 where
