--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
   * makefile.pm: Pass V=0 or V=1 to the make file depending on
     whether "terse" is set in DEB_BUILD_OPTIONS.
 
+  [ Niels Thykier ]
+  * dh_gconf: Mark dh_gconf as deprecated (see #908845).
+
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
 debhelper (11.5.1) unstable; urgency=medium
