--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
   * dh_gconf: Mark dh_gconf as deprecated (see #908845).
+  * Dh_Lib.pm: Separate lowest non-deprecated compat level and
+    the lowest compat level we generate "debhelper-compat (= X)"
+    relations for.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
