Dh_Lib: Accept compat level 13
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
   * Dh_Lib.pm: Separate lowest non-deprecated compat level and
     the lowest compat level we generate "debhelper-compat (= X)"
     relations for.
+  * Dh_Lib.pm: Open compat level 13 as an experimental compat
+    level.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
