dh: Fix inverted boolean logic
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,11 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
   * meson.pm: In compat 13, run tests with "meson test" rather
     than "ninja test".  Thanks to Simon McVittie for the
     suggestion.  (Closes: #912560)
+  * dh: Correctly include dh_installsystemduser in the sequence
+    in compat 12.  It was excluded due to an inverted boolean
+    meaning it was added in compat up to (and incl.) compat 11.
+    Thanks to Michael Biebl for reporting the issue.
+    (Closes: #913329)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
