fr.po: Correct the French translation for dh_installman
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -7948,7 +7948,7 @@ msgid ""
 "B<dh_installman> is a debhelper program that handles installing man pages "
 "into the correct locations in package build directories."
 msgstr ""
-"B<dh_installman> est l'ancien programme de la suite debhelper chargé de "
+"B<dh_installman> est un programme de la suite debhelper chargé de "
 "l'installation automatique des pages de manuel au bon endroit dans le "
 "répertoire de construction du paquet."
 
