--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,10 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
     meaning it was added in compat up to (and incl.) compat 11.
     Thanks to Michael Biebl for reporting the issue.
     (Closes: #913329)
+  * fr.po: Correct translations for dh_installman.1 which
+    incorrectly implied that dh_installman was deprecated.
+    Thanks to Laurent Bigonville for reporting the issue.
+    (Closes: #912978)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
