--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,11 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
     Thanks to Laurent Bigonville for reporting the issue.
     (Closes: #912978)
 
+  [ Helmut Grohne ]
+  * cmake.pm: Pass QMAKE_EXECUTABLE when cross-building.
+    (Closes: #913415)
+
+
  -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
 
 debhelper (11.5.1) unstable; urgency=medium
