--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.5.2) UNRELEASED; urgency=medium
+debhelper (11.5.2) unstable; urgency=medium
 
   [ Luca Boccassi ]
   * makefile.pm: Pass V=0 or V=1 to the make file depending on
@@ -29,7 +29,7 @@ debhelper (11.5.2) UNRELEASED; urgency=medium
     (Closes: #913415)
 
 
- -- Niels Thykier <niels@thykier.net>  Sat, 03 Nov 2018 08:02:02 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 10 Nov 2018 19:51:25 +0000
 
 debhelper (11.5.1) unstable; urgency=medium
 
