--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.5.3) UNRELEASED; urgency=medium
+
+  [ Helmut Grohne ]
+  * cmake.pm: Pass the usual CMAKE_SYSTEM_PROCESSOR for ppc64el
+    when cross compiling.   (Closes: #913425)
+
+ -- Niels Thykier <niels@thykier.net>  Sat, 10 Nov 2018 20:36:59 +0000
+
 debhelper (11.5.2) unstable; urgency=medium
 
   [ Luca Boccassi ]
