--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (11.5.4) UNRELEASED; urgency=medium
+
+  * Dh_Lib.pm: Reopen stdin to read from /dev/null in doit (and its sibling
+    functions) to prevent issues when stdin is open in write-only mode
+    (which is what nohup(1) does).  Thanks to Julian Gilbey for reporting
+    the issue and providing a sample patch for it as well.
+    (Closes: #913663)
+  * dh_installman: Ditto.
+
+ -- Niels Thykier <niels@thykier.net>  Tue, 13 Nov 2018 20:30:49 +0000
+
 debhelper (11.5.3) unstable; urgency=medium
 
   [ Helmut Grohne ]
