fr.po: Add missing dash in --parallel
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debhelper (11.5.4) UNRELEASED; urgency=medium
     (which is what nohup(1) does).  Thanks to Julian Gilbey for reporting
     the issue and providing a sample patch for it as well.
     (Closes: #913663)
+  * fr.po: Add missing dash in "--parallel" in a translation.  Thanks to
+    Christian Marillat for reporting the issue.  (Closes: #915255)
 
  -- Niels Thykier <niels@thykier.net>  Tue, 13 Nov 2018 20:30:49 +0000
 
