--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -796,7 +796,7 @@ msgstr ""
 #. type: =item
 #: debhelper.pod:278
 msgid "B<--parallel>, B<--no-parallel>"
-msgstr "B<-parallel>, B<--no-parallel>"
+msgstr "B<--parallel>, B<--no-parallel>"
 
 #. type: textblock
 #: debhelper.pod:280
