debhelper.7: Document that python-distutils is gone [c12]
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -920,6 +920,11 @@ B<Debian::Debhelper::Buildsystem::golang(3pm)> for details and examples.
 B<dh_installsystemduser> is now included in the B<dh> standard
 sequence by default.
 
+=item -
+
+The B<python-distutils> buildsystem is now removed.  Please use the
+third-party build system B<pybuild> instead.
+
 =back
 
 =item v13
