--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (11.5.4) UNRELEASED; urgency=medium
     (Closes: #913663)
   * fr.po: Add missing dash in "--parallel" in a translation.  Thanks to
     Christian Marillat for reporting the issue.  (Closes: #915255)
+  * debhelper.7: Document that the "python-distutils" build system is
+    removed in compat 12.  Thanks to Axel Beckert for reporting the
+    omission.  (Closes: #915530)
 
   [ Luca Boccassi ]
   * makefile.pm: revert passing V=0/1 to makefiles. Fixes FTBFS in apcupsd
