--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (11.5.4) UNRELEASED; urgency=medium
+debhelper (11.5.4) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Dh_Lib.pm: Reopen stdin to read from /dev/null in doit (and its sibling
@@ -17,7 +17,7 @@ debhelper (11.5.4) UNRELEASED; urgency=medium
     (and possibly more).
     (Closes: #914419)
 
- -- Niels Thykier <niels@thykier.net>  Tue, 13 Nov 2018 20:30:49 +0000
+ -- Niels Thykier <niels@thykier.net>  Sat, 15 Dec 2018 19:18:47 +0000
 
 debhelper (11.5.3) unstable; urgency=medium
 
