d/changelog: Add changelog entry for Dmitry's change
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (11.5.5) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * dh_compress: Do not compress mkdocs search indices
+    (search_index.json).
+
+ -- Niels Thykier <niels@thykier.net>  Sun, 16 Dec 2018 19:10:51 +0000
+
 debhelper (11.5.4) unstable; urgency=medium
 
   [ Niels Thykier ]
