Mark compat 12 as stable
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-debhelper (11.5.5) UNRELEASED; urgency=medium
+debhelper (12) UNRELEASED; urgency=medium
+
+  [ Niels Thykier ]
+  * Release debhelper/12 marking compat 12 as stable.
 
   [ Dmitry Shachnev ]
   * dh_compress: Do not compress mkdocs search indices
     (search_index.json).
 
- -- Niels Thykier <niels@thykier.net>  Sun, 16 Dec 2018 19:10:51 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 24 Dec 2018 12:50:55 +0000
 
 debhelper (11.5.4) unstable; urgency=medium
 
