dh: Special case cli-options() with no options
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (12) UNRELEASED; urgency=medium
 
   [ Niels Thykier ]
   * Release debhelper/12 marking compat 12 as stable.
+  * dh: Special NOOP PROMISE of cli-options() to always allow skipping
+    the helper (as we know no option can make it change behaviour).
 
   [ Dmitry Shachnev ]
   * dh_compress: Do not compress mkdocs search indices
