--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (12) UNRELEASED; urgency=medium
+debhelper (12) unstable; urgency=medium
 
   [ Niels Thykier ]
   * Release debhelper/12 marking compat 12 as stable.
@@ -9,7 +9,7 @@ debhelper (12) UNRELEASED; urgency=medium
   * dh_compress: Do not compress mkdocs search indices
     (search_index.json).
 
- -- Niels Thykier <niels@thykier.net>  Mon, 24 Dec 2018 12:50:55 +0000
+ -- Niels Thykier <niels@thykier.net>  Mon, 24 Dec 2018 13:47:55 +0000
 
 debhelper (11.5.4) unstable; urgency=medium
 
