dh_fixperms: add .node in mode_0644_patterns

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (12.1) UNRELEASED; urgency=medium
+
+  [ Xavier Guimard ]
+  * dh_fixperms: add .node in mode_0644_patterns
+
+ -- Niels Thykier <niels@thykier.net>  Fri, 04 Jan 2019 18:27:58 +0100
+
 debhelper (12) unstable; urgency=medium
 
   [ Niels Thykier ]
