dh_installinit: --name implies, that init script is present
Previously, `dh_installinit' silently did nothing, when --name option
was passed, but initscript debian/<package>.<name>.init was not found.

In almost all cases, explicit --name means that package maintainer meant
to install init script. If it is not present, it is bug, and must not be
hidden. Now, error is reported in this case. (Closes: #462389)

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,11 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
     (Closes: #926815)
 
+  [ Dmitry Bogatov ]
+  * dh_installinit: Fail with an error if --name is given but
+    there is no matching init script.  Thanks to A Mennucc
+    for reporting the issue.  (Closes: #462389)
+
   [ Translations ]
   * Update Portuguese translation (Américo Monteiro)  (Closes: #886279)
 
